syntax = "proto3";

package tinkoff.public.invest.api.contract.v1;

option go_package = "./;investapi";
option java_package = "ru.tinkoff.piapi.contract.v1";
option java_multiple_files = true;
option csharp_namespace = "Tinkoff.InvestApi.V1";
option objc_class_prefix = "TIAPI";
option php_namespace = "Tinkoff\\Invest\\V1";

import "google/protobuf/timestamp.proto";
import "common.proto";

service OperationsService {/*Сервис предназначен для получения:</br> **1**.  списка операций по счёту;</br> **2**.
                              портфеля по счёту;</br> **3**. позиций ценных бумаг на счёте;</br> **4**.
                              доступного остатка для вывода средств.*/
  //Метод получения списка операций по счёту.
  rpc GetOperations(OperationsRequest) returns (OperationsResponse);

  //Метод получения портфеля по счёту.
  rpc GetPortfolio(PortfolioRequest) returns (PortfolioResponse);

  //Метод получения списка позиций по счёту.
  rpc GetPositions(PositionsRequest) returns (PositionsResponse);

  //Метод получения доступного остатка для вывода средств.
  rpc GetWithdrawLimits(WithdrawLimitsRequest) returns (WithdrawLimitsResponse);
}

//Запрос получения списка операций по счёту.
message OperationsRequest {
  string account_id = 1; //Идентификатор счёта клиента
  google.protobuf.Timestamp from = 2; //Начало периода (по UTC)
  google.protobuf.Timestamp to = 3; //Окончание периода (по UTC)
  OperationState state = 4; //Статус запрашиваемых операций
  string figi = 5; //Figi-идентификатор инструмента для фильтрации
}

//Список операций.
message OperationsResponse {
  repeated Operation operations = 1; //Массив операций
}

//Данные по операции.
message Operation {
  string id = 1; //Идентификатор операции
  string parent_operation_id = 2; //Идентификатор родительской операции
  string currency = 3; //Валюта операции
  MoneyValue payment = 4; //Сумма операции
  MoneyValue price = 5; //Цена операции
  OperationState state = 6; //Статус операции
  int64 quantity = 7; //Количество лотов инструмента
  int64 quantity_rest = 8; //Неисполненный остаток по сделке
  string figi = 9; //Figi-идентификатор инструмента, связанного с операцией
  string instrument_type = 10;  //Тип инструмента. Возможные значения: </br>**bond** — облигация; </br>**share** — акция; </br>**currency** — валюта; </br>**etf** — фонд; </br>**futures** — фьючерс.
  google.protobuf.Timestamp date = 11; //Дата и время операции в формате часовом поясе UTC
  string type = 12; //Текстовое описание типа операции
  OperationType operation_type = 13; //Тип операции
}

//Запрос получения текущего портфеля по счёту.
message PortfolioRequest {
  string account_id = 1; //Идентификатор счёта пользователя
}

//Текущий портфель по счёту.
message PortfolioResponse {
  MoneyValue total_amount_shares = 1; //Общая стоимость акций в портфеле в рублях
  MoneyValue total_amount_bonds = 2; //Общая стоимость облигаций в портфеле в рублях
  MoneyValue total_amount_etf = 3; //Общая стоимость фондов в портфеле в рублях
  MoneyValue total_amount_currencies = 4; //Общая стоимость валют в портфеле в рублях
  MoneyValue total_amount_futures = 5; //Общая стоимость фьючерсов в портфеле в рублях
  Quotation expected_yield = 6; //Текущая доходность портфеля
  repeated PortfolioPosition positions = 7; //Список позиций портфеля
}

//Запрос позиций портфеля по счёту.
message PositionsRequest {
  string account_id = 1; //Идентификатор счёта пользователя
}

//Список позиций по счёту.
message PositionsResponse {
  repeated MoneyValue money = 1;  //Массив валютных позиций портфеля
  repeated MoneyValue blocked = 2;  //Массив заблокированных валютных позиций портфеля
  repeated PositionsSecurities securities = 3;  //Список ценно-бумажных позиций портфеля
  bool limits_loading_in_progress = 4;  //Признак идущей в данный момент выгрузки лимитов
  repeated PositionsFutures futures = 5;  //Список фьючерсов портфеля
}

//Запрос доступного для вывода остатка.
message WithdrawLimitsRequest {
  string account_id = 1; //Идентификатор счёта пользователя
}

//Доступный для вывода остаток.
message WithdrawLimitsResponse {
  repeated MoneyValue money = 1; //Массив валютных позиций портфеля
  repeated MoneyValue blocked = 2; //Массив заблокированных валютных позиций портфеля
  repeated MoneyValue blocked_guarantee = 3; //Заблокировано под гарантийное обеспечение фьючерсов
}

//Позиции портфеля.
message PortfolioPosition {
  string figi = 1; //Figi-идентификатора инструмента
  string instrument_type = 2; //Тип инструмента
  Quotation quantity = 3; //Количество инструмента в портфеле в штуках
  MoneyValue average_position_price = 4; //Средняя цена лота в позиции
  Quotation expected_yield = 5; //Текущая рассчитанная доходность
  MoneyValue current_nkd = 6; // Текущий НКД
  Quotation average_position_price_pt = 7; //Средняя цена лота в позиции в пунктах (для фьючерсов)
  MoneyValue current_price = 8; //Текущая цена инструмента
}

//Баланс позиции ценной бумаги.
message PositionsSecurities {
  string figi = 1; //Figi-идентификатор бумаги
  int64 blocked = 2; //Заблокировано
  int64 balance = 3;  //Текущий баланс
}

//Баланс фьючерса.
message PositionsFutures {
  string figi = 1; //Figi-идентификатор фьючерса
  int64 blocked = 2; //Заблокировано
  int64 balance = 3;  //Текущий баланс
}

//Статус запрашиваемых операций
enum OperationState {
  OPERATION_STATE_UNSPECIFIED = 0; //Статус операции не определён
  OPERATION_STATE_EXECUTED = 1; //Исполнена
  OPERATION_STATE_CANCELED = 2; //Отменена
}

//Тип операции
enum OperationType {
  OPERATION_TYPE_UNSPECIFIED = 0; //Тип операции не определён
  OPERATION_TYPE_INPUT = 1; //Завод денежных средств
  OPERATION_TYPE_BOND_TAX = 2; //Удержание налога по купонам
  OPERATION_TYPE_OUTPUT_SECURITIES = 3; //Вывод ЦБ
  OPERATION_TYPE_OVERNIGHT = 4; //Доход по сделке РЕПО овернайт
  OPERATION_TYPE_TAX = 5; //Удержание налога
  OPERATION_TYPE_BOND_REPAYMENT_FULL = 6; //Полное погашение облигаций
  OPERATION_TYPE_SELL_CARD = 7; //Продажа ЦБ с карты
  OPERATION_TYPE_DIVIDEND_TAX = 8; //Удержание налога по дивидендам
  OPERATION_TYPE_OUTPUT = 9; //Вывод денежных средств
  OPERATION_TYPE_BOND_REPAYMENT = 10; //Частичное погашение облигаций
  OPERATION_TYPE_TAX_CORRECTION = 11; //Корректировка налога
  OPERATION_TYPE_SERVICE_FEE = 12; //Удержание комиссии за обслуживание брокерского счёта
  OPERATION_TYPE_BENEFIT_TAX = 13; //Удержание налога за материальную выгоду
  OPERATION_TYPE_MARGIN_FEE = 14; //Удержание комиссии за непокрытую позицию
  OPERATION_TYPE_BUY = 15; //Покупка ЦБ
  OPERATION_TYPE_BUY_CARD = 16; //Покупка ЦБ с карты
  OPERATION_TYPE_INPUT_SECURITIES = 17; //Завод ЦБ
  OPERATION_TYPE_SELL_MARGIN = 18; //Продажа в результате Margin-call
  OPERATION_TYPE_BROKER_FEE = 19; //Удержание комиссии за операцию
  OPERATION_TYPE_BUY_MARGIN = 20; //Покупка в результате Margin-call
  OPERATION_TYPE_DIVIDEND = 21; //Выплата дивидендов
  OPERATION_TYPE_SELL = 22; //Продажа ЦБ
  OPERATION_TYPE_COUPON = 23; //Выплата купонов
  OPERATION_TYPE_SUCCESS_FEE = 24; //Удержание комиссии SuccessFee
  OPERATION_TYPE_DIVIDEND_TRANSFER = 25; //Передача дивидендного дохода
  OPERATION_TYPE_ACCRUING_VARMARGIN = 26; //Зачисление вариационной маржи
  OPERATION_TYPE_WRITING_OFF_VARMARGIN = 27; //Списание вариационной маржи
  OPERATION_TYPE_DELIVERY_BUY = 28; //Покупка в рамках экспирации фьючерсного контракта
  OPERATION_TYPE_DELIVERY_SELL = 29; //Продажа в рамках экспирации фьючерсного контракта
  OPERATION_TYPE_TRACK_MFEE = 30; //Комиссия за управление по счёту автоследования
  OPERATION_TYPE_TRACK_PFEE = 31; //Комиссия за результат по счёту автоследования
  OPERATION_TYPE_TAX_PROGRESSIVE = 32; //Удержание налога по ставке 15%
  OPERATION_TYPE_BOND_TAX_PROGRESSIVE = 33; //Удержание налога по купонам по ставке 15%
  OPERATION_TYPE_DIVIDEND_TAX_PROGRESSIVE = 34; //Удержание налога по дивидендам по ставке 15%
  OPERATION_TYPE_BENEFIT_TAX_PROGRESSIVE = 35; //Удержание налога за материальную выгоду по ставке 15%
  OPERATION_TYPE_TAX_CORRECTION_PROGRESSIVE = 36; //Корректировка налога по ставке 15%
  OPERATION_TYPE_TAX_REPO_PROGRESSIVE = 37; //Удержание налога за возмещение по сделкам РЕПО по ставке 15%
  OPERATION_TYPE_TAX_REPO = 38; //Удержание налога за возмещение по сделкам РЕПО
  OPERATION_TYPE_TAX_REPO_HOLD = 39; //Удержание налога по сделкам РЕПО
  OPERATION_TYPE_TAX_REPO_REFUND = 40; //Возврат налога по сделкам РЕПО
  OPERATION_TYPE_TAX_REPO_HOLD_PROGRESSIVE = 41; //Удержание налога по сделкам РЕПО по ставке 15%
  OPERATION_TYPE_TAX_REPO_REFUND_PROGRESSIVE = 42; //Возврат налога по сделкам РЕПО по ставке 15%
  OPERATION_TYPE_DIV_EXT = 43; //Выплата дивидендов на карту
}
